# Freeman

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Freeman_TZ_v1.md  PROGRESS.md  README.md  config.climate.yaml  config.yaml  config.yaml.example  conftest.py  docker-compose.yml  domain_brief_climate_news.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
TS/: v01.md  v02.md
docs/: API_MAP.md  ARCHITECTURE.md  CONSCIOUSNESS_ARCHITECTURE.md  FAAB.md  FREEMAN_ARCHITECTURE_3D.html  FREEMAN_FULL_ARCHITECTURE.md  FREEMAN_LITE.md  GEO_ANALYTICS.md  HIVE_RUNTIME.md  ONTOLOGY_INGESTION.md  PRODUCTION_ROADMAP.md  REAL_LLM_E2E.md  RELEASE_3_0.md  RELEASE_3_1.md  RELEASE_3_2.md  RELEASE_3_2_1.md  RELEASE_3_2_2.md  RELEASE_3_3_1.md  RELEASE_3_4_0.md
docs/agents/: README.md  ingestor.md  narrator.md  planner.md  repairer.md  verifier.md
examples/: domain_brief_climate_news.md  freeman_librarian_legal_demo.yaml
freeman/: __init__.py  exceptions.py  lite_api.py  lite_config.py  lite_state.py  logging_config.py  utils.py
freeman/agent/: __init__.py  analysispipeline.py  attentionscheduler.py  consciousness.py  costmodel.py  domainregistry.py  epistemic.py  forecastregistry.py  parameterestimator.py  policyevaluator.py  proactiveemitter.py  signalingestion.py
freeman/api/: __init__.py  tool_api.py
freeman/causal/: __init__.py  estimator.py  result.py
freeman/core/: __init__.py  access.py  compilevalidator.py  evolution.py  multiworld.py  scorer.py  (+5 more)
freeman_librarian/: __init__.py  exceptions.py
scripts/: __init__.py  run_deepseek_simulation.py  run_random_news_etl_benchmark.py  run_real_llm_e2e.py  seed_climate_kg.py
tests/: README.md  conftest.py  harness.py  test_agent_behavior.py  test_attention.py  test_benchmark_faab.py  test_bootstrap_contracts.py  test_climate_seed.py  test_compiler.py  test_compilevalidator.py  test_connectors.py  test_consciousness_stage1.py  test_consciousness_stage2.py  test_consciousness_stage3.py  test_consciousness_stage4.py  test_core_phase1.py  test_costmodel.py  test_debt_scenario.py  test_evolution.py  test_fixedpoint.py  test_forecastregistry.py  test_freeman_librarian_bootstrap.py  test_freeman_librarian_legal_demo.py  test_gim15_compat.py  test_hashing_embedding.py  test_hive_mind.py  test_humanoverride.py  test_integration.py  test_kg_backends.py  test_kgevolution.py  test_level0.py  test_level1.py  test_level2.py  test_manifold_realworld.py  test_mcp_server.py  test_metrics.py  test_multiworld.py  test_ollama_embedding.py  test_openai_client.py  test_parameterestimator.py  (+17 more)
tests_lite/: conftest.py  test_cli_lite.py  test_orchestrator_lite.py  test_pipeline_lite.py  test_signal_ingestion_lite.py
(+212 files in other folders)
