[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freeman-lite"
version = "0.1.0"
description = "Lightweight Freeman runtime for news-to-simulation workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
freeman-lite = "freeman.interface.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["freeman*"]

[tool.pytest.ini_options]
testpaths = ["tests_lite"]
